--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 • Show a prompt when waiting for a new command											|	done
 • Search and launch the right executable (based on the PATH variable or by using
-relative or absolute path) like in bash													|	N
+relative or absolute path) like in bash													|	done
 • It must implement the builtins like in bash:											|	N
  ◦ echo with option ’-n’																|	done
  ◦ cd without ’-’ option																|	
